[tool.poetry]
name = "solana_agent"
version = "0.0.1"
description = ""
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
packages = [{include = "solana_agent"}]

[tool.poetry.dependencies]
python = "^3.10.9"
fastapi = "0.115.6"
uvicorn = {version = "0.33.0", extras = ["standard"]}
gunicorn = "23.0.0"
python-dotenv = "1.0.1"
pydantic = "*"
motor = "3.6.0"
cyberchipped = "2.1.10"
sse-starlette = "2.1.3"
pyjwt = "2.10.1"
httpx = "0.28.1"
taskiq = "0.11.10"
taskiq-redis = "1.0.2"
taskiq-fastapi = "0.3.3"
requests = "2.32.3"
tweepy = "4.14.0"
exceptiongroup = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-mock = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
